lang/tests/compile_fail/realloc_bad_signer.stderr
error[E0277]: the trait bound `quasar_lang::accounts::Signer: SupportsRealloc` is not satisfied
 --> tests/compile_fail/realloc_bad_signer.rs:9:18
  |
6 | #[derive(Accounts)]
  |          -------- required by a bound introduced by this call
...
9 |     pub account: Signer,
  |                  ^^^^^^ the trait `SupportsRealloc` is not implemented for `quasar_lang::accounts::Signer`
  |
  = help: the following other types implement trait `SupportsRealloc`:
            Account<T>
            InterfaceAccount<T>
            Migration<From, To>
note: required by a bound in `quasar_lang::ops::realloc::Op::<'a>::apply`
 --> src/ops/realloc.rs
  |
  |     pub fn apply<F: AccountLoad + SupportsRealloc + crate::traits::Space>(
  |                                   ^^^^^^^^^^^^^^^ required by this bound in `Op::<'a>::apply`

error[E0277]: the trait bound `quasar_lang::accounts::Signer: quasar_lang::prelude::Space` is not satisfied
 --> tests/compile_fail/realloc_bad_signer.rs:9:18
  |
6 | #[derive(Accounts)]
  |          -------- required by a bound introduced by this call
...
9 |     pub account: Signer,
  |                  ^^^^^^ the trait `quasar_lang::prelude::Space` is not implemented for `quasar_lang::accounts::Signer`
  |
  = help: the following other types implement trait `quasar_lang::prelude::Space`:
            Account<T>
            InterfaceAccount<T>
            Migration<From, To>
note: required by a bound in `quasar_lang::ops::realloc::Op::<'a>::apply`
 --> src/ops/realloc.rs
  |
  |     pub fn apply<F: AccountLoad + SupportsRealloc + crate::traits::Space>(
  |                                                     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Op::<'a>::apply`
